hedtools/tests/data/invalid_wiki_schemas/HED_schema_no_end.mediawiki
HED version:8.0.0-alpha.1

'''Prologue'''
This is a prologue line.
This is a second prologue line.

!# start schema